[aliases]
test=pytest

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 7.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = jastro
description = James' astronomy toolkit
long_description = A toolkit for analysing data
author = James McCormac
author_email = jmccormac001@gmail.com
license = MIT
url = https://github.com/jmccormac01/jastro
edit_on_github = False
github_project = jmccormac01/jastro

[entry_points]
